# QaterialGallery

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  PrivacyPolicy.md  QaterialGallery.js  README.md  index.html
.github/workflows/: android-apk.yml  build.yml  deploy-gh-pages.yml  ios-ipa.yml  linux-appimage.yml  macos-dmg.yml  main.yml  wasm.yml  windows-installer.yml
cmake/: BuildLibEndian.cmake  BuildQBCInstaller.cmake  BuildQQmlModel.cmake  BuildQSortFilterProxyModel.cmake  BuildQtAndroidCMake.cmake  BuildQtIosCMake.cmake  BuildQtStaticCMake.cmake  BuildQtWindowsCMake.cmake  Dependencies.cmake  DownloadProject.cmake  FetchQaterial.cmake  FetchQtAndroidCMake.cmake  FetchQtIosCMake.cmake  FetchQtLinuxCMake.cmake  FetchQtMacCMake.cmake  FetchQtStaticCMake.cmake  FetchQtWasmCMake.cmake  FetchSpdlog.cmake
images/: images.qrc
include/QaterialGallery/: QaterialGallery.hpp
include/QaterialGallery/Pch/: Pch.hpp
platform/: CMakeLists.txt  PostBuildPlatform.cmake  PreBuildPlatform.cmake
platform/android/: AndroidManifest.xml.in
platform/android/res/values/: styles.xml
platform/ios/: LaunchScreen.storyboard  Main.storyboard
platform/windows/: QtConf.qrc  qt.conf
qml/: AppBarBottomPage.qml  AppBarContent.qml  AppBarTopPage.qml  BannerPage.qml  ButtonPage.qml  CardLayout1.qml  CardLayout2.qml  CardLayout3.qml  CardLayout4.qml  CardPage.qml  ClusteredTabBarPage.qml  ClusturedTabBarPage.qml  ControlButtonPage.qml  DateTimePickersPage.qml  DelegatePage.qml  DialogDelegatePage.qml  DialogPage.qml  FABPage.qml  FaderPage.qml  FixedTabBarPage.qml  FooterTabBarPage.qml  FramePage.qml  GroupBoxLayout.qml  GroupBoxPage.qml  IconButtonPage.qml  Import.qml  LatoTabBarPage.qml  Main.qml  MaterialPage.qml  MenuBarPage.qml  QaterialGallery.qrc  ScrollableTabBarPage.qml  SlidersPage.qml  SnackbarPage.qml  StepperPage.qml  TabBarPage.qml  TextFieldPage.qml  ToolTipPage.qml  TypoPage.qml  qaterialGallery.qrc  (+1 more)
qml/QaterialGallery/: AppBarBottomPage.qml  AppBarContent.qml  AppBarTopPage.qml  BannerPage.qml  ButtonPage.qml  CardLayout1.qml  CardLayout3.qml  CardPage.qml  ClusteredTabBarPage.qml  ControlButtonPage.qml  DateTimePickersPage.qml  DelegatePage.qml  DialogDelegatePage.qml  DialogPage.qml  FABPage.qml  FaderPage.qml  FixedTabBarPage.qml  FooterTabBarPage.qml  FramePage.qml  GroupBoxPage.qml  IconButtonPage.qml  LatoTabBarPage.qml  Main.qml  MaterialPage.qml  MenuBarPage.qml  ScrollableTabBarPage.qml  SlidersPage.qml  SnackbarPage.qml  StepperPage.qml  TextFieldPage.qml  ToolTipPage.qml  TypoPage.qml  TypoPageEntry.qml  qmldir
qml/images/: images.qrc
src/: Main.cpp  QQuickMaterialHelperGallery.cpp  QQuickMaterialHelperGallery.hpp  QaterialGallery.cpp
src/include/: QaterialGallery.hpp
